--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
   <nav class="navbar navbar-expand-lg bg-primary navbar-dark fixed-top">
     <div class="container">
       <a class="navbar-brand" href="#">
-        <img src="img/logo_BVU.png" style="max-height: 7vb;" class="d-inline-block align-top" alt="Burschengaufest 2024 Unterneukirchen">
+        <img src="img/logo_BVU.png" style="max-height: 7vb;" class="d-inline-block align-top"
+          alt="Burschengaufest 2024 Unterneukirchen">
         <!-- Burschenverein Unterneukirchen -->
       </a>
 
@@ -83,7 +84,8 @@
           <hr class="bg-primary">
 
           <p class="h5 my-4">
-            De nächste Verantstaltung de bei uns ohsteht is as Steckalfischgrillen am 18.04.2025
+            De nächste Verantstaltung de bei uns ohsteht is unser 2 Tagesfest, mit an Wein-und Weißbierfest am
+            22.08.2025 und unserer legendären Burschenparty am 23.08.2025.
           </p>
 
           <hr class="bg-primary">
@@ -96,9 +98,6 @@
           </a>
 
         </div>
-        <div class="col justify-content-right d-none">
-          <img src="img/Wintersonnwendfeuer.jpg" alt="Gauburschenfest 2023" loading="lazy" class="img-fluid">
-        </div>
       </div>
     </div>
   </section>
@@ -109,7 +108,7 @@
 
       <div class="row text-center text-success">
         <div class="col">
-          <h1> <span class="text-light-grey">Nächste Veranstaltung </span> <span id="CountdownDescription">  </span>
+          <h1> <span class="text-light-grey">Nächste Veranstaltung </span> <span id="CountdownDescription"> </span>
           </h1>
         </div>
       </div>
@@ -118,35 +117,6 @@
           <hr class="bg-white" style="height: 3px;">
         </div>
       </div>
-
-      <div class="row">
-        <div class="col-lg-6 text-secondary text-end px-5 d-none d-lg-block">
-            <h2>18.04.2025</h2>
-            <h2>Karfreitag</h2>
-            <h3 class="text-white">Steckalfischgrillen</h3>
-            <h5 class="text-dark">bei der Brauerei Leidmann</h5>
-            <h5 class="text-white"> Natürlich gibt's a heuer wieder unser traditionelles Steckalfisch-Grillen!🐟🥳</h5>
-            <h5 class="text-white"> Stattfinden duad des ganze wieder bei der Brauerei Leidmann z'Unterneikircha.🍻 Unsere Fische hamma wie gewohnt von da Fischzucht Salzinger.😋👌</h5>
-            <br>            
-            <h5 class="text-white"> Die Fische gibt's ohne Vorbestellung von 11:00 bis 14:00 Uhr und können entweder in gemütlicher Atmosphäre mit süffigen Getränken vor Ort verzehrt werden oder mit Hoam gnumma wern.🐟🎪🍻 </h5>
-            <br>            
-            <h5 class="text-white"> Wir gfrein uns auf Eich!</h5>
-            <h5 class="text-white"> Eier Burschenverein Unterneukirchen🤝🏼</h5>
-            <br>
-            <h6 class="text-white"> 🕖 11:00 bis 14:00 Uhr </h6>
-            <h6 class="text-white"> 📍 Brauerei Leidmann </h6>
-            <h6 class="text-white"> 🍺 Zum dort Essen, oda zum Midnehma! </h6>
-            <br>
-        </div>
-        <div class="col-lg-6 text-lg-start text-center">
-            <img src="img/Fischgrillen.jpg" loading="lazy" alt="Bieranstich" class="img-fluid"
-                style="max-height: 60vh; max-width: 100%; margin-bottom: 1vh;" />
-        </div>
-        <div class="text-center d-block d-lg-none">
-            <a href="#navtoFischgrillen" class="nav-link text-white" data-bs-toggle="modal"
-                data-bs-target="#FischgrillenModal"><i class="bi bi-info-circle-fill"></i> mehr infos</a>
-        </div>
-    </div>
 
       <div class="row text-center p-5 text-success">
         <div class="col-6 col-md-3">
@@ -166,6 +136,77 @@
           <h3>Sekunden</h3>
         </div>
       </div>
+      
+      <div class="row">
+        <div class="col">
+          <hr class="bg-white" style="height: 3px;">
+        </div>
+      </div>
+      
+      <div class="row">
+        <div class="col-lg-6 text-secondary text-end px-5 d-none d-lg-block">
+          <h2>22.08.2025</h2>
+          <h2>Wein-und Weißbierfest</h2>
+          <br>
+          <h5 class="text-white"> Nach langen warten derfma eich endlich wieder recht herzlich zu unserem Wein-und Weißbierfest eilon! </h5>
+          <h5 class="text-white"> Neba ausgewählten Weinen gibts a diverse Weißbiersorten aus da Region.🍷🍻</h5>
+          <br>
+          <h5 class="text-white"> Für jede Menge Stimmung sorgen de Bergdachsen🎉🏔️🦡 und fürs leibliche Wohl ist natürlich a gesorgt! </h5>
+          <br>
+          <h5 class="text-white"> Wir gfrein uns auf eichan Bsuach aufn Firmengelände vo Möbel-Eins! </h5>
+          <h5 class="text-white"> Euer Burschenverein Unterneukirchen🤟🏾</h5>
+          <br>
+          <h6 class="text-white"> 🕖 Beginn 19:30 Uhr</h6>
+          <h6 class="text-white"> 📍 Fa. Möbel-Eins in Unterneukirchen </h6>
+          <br>
+        </div>
+        <div class="col-lg-6 text-lg-start text-center">
+          <img src="img/W&WB2025.png" loading="lazy" alt="Bieranstich" class="img-fluid"
+            style="max-height: 60vh; max-width: 100%; margin-bottom: 1vh;" />
+        </div>
+        <div class="text-center d-block d-lg-none">
+          <a href="#navtoWundWFest" class="nav-link text-white" data-bs-toggle="modal"
+            data-bs-target="#WundWFestModal"><i class="bi bi-info-circle-fill"></i> mehr infos</a>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col">
+          <hr class="bg-white" style="height: 3px;">
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-6 text-lg-start text-center">
+          <img src="img/Burschenparty2025.png" loading="lazy" alt="Bieranstich" class="img-fluid"
+            style="max-height: 60vh; max-width: 100%; margin-bottom: 1vh;" />
+        </div>
+        <div class="col-lg-6 text-secondary text-start px-5 d-none d-lg-block">
+          <h2>23.08.2025</h2>
+          <h2>Burschenparty</h2>
+          <br>
+          <h5 class="text-white"> Aufgeht´s zur legendären Burschenparty vom Burschenverein Unterneukirchen!😎🥳🍻 </h5>
+          <h5 class="text-white"> Für die Musik sorgt @da_dj2b ausm Spinnradl Spitzingsee.🔊🎧 </h5>
+          <br>
+          <h5 class="text-white"> Wie jedes Jahr ist auch wieder unser Weißbierkarussell vor Ort und wir sorgen an der Bar für ausreichend kühle Getränke!🍻🥃🍾 </h5>
+          <br>
+          <h5 class="text-white"> Stattfinden duad des ganze im Festzelt auf dem Gelände der Firma Möbel-eins, direkt neben der B299.😉</h5>
+          <h5 class="text-white"> Eiso liabe Leid, merkts eich des Datum guad vor und schauts zahlreich vorbei!😉🤝🏼</h5>
+          <br>
+          <h5 class="text-white"> Mia gfrein uns auf eich!</h5>
+          <h5 class="text-white"> Euer Burschenverein Unterneukirchen🥳</h5>
+          <br>
+          <h6 class="text-white"> 🕖 Ab 20:00 Uhr</h6>
+          <h6 class="text-white"> 📍 Fa. Möbel-Eins in Unterneukirchen </h6>
+          <br>
+        </div>
+
+        <div class="text-center d-block d-lg-none">
+          <a href="#navtoBurschenparty" class="nav-link text-white" data-bs-toggle="modal"
+            data-bs-target="#BurschenpartyModal"><i class="bi bi-info-circle-fill"></i> mehr infos</a>
+        </div>
+      </div>
+
     </div>
   </section>
 
