--- a/modals/veranstaltungen.html
+++ b/modals/veranstaltungen.html
@@ -1,31 +1,24 @@
-<!-- Modal Fischgrillen -->
-<div class="modal fade" id="FischgrillenModal" tabindex="-1" aria-labelledby="FischgrillenModalLabel" aria-hidden="true">
+<!-- Modal WundWFest -->
+<div class="modal fade" id="WundWFestModal" tabindex="-1" aria-labelledby="WundWFestModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-sm">
     <div class="modal-content bg-light-grey">
       <div class="modal-header">
-        <h5 class="modal-title" id="FischgrillenModalModalLabel">18.04.2025 Karfreitag</h5>
+        <h5 class="modal-title" id="WundWFestModalModalLabel">22.08.2025 Wein-und Weißbierfest</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
         <div class="col">
-          <h2>18.04.2025</h2>
-          <h2>Karfreitag</h2>
-          <h3 class="text-dark">Steckalfischgrillen</h3>
-          <h5 class="text-dark">bei der Brauerei Leidmann</h5>
-          <h5 class="text-dark">Natürlich gibt's a heuer wieder unser traditionelles Steckalfisch-Grillen!🐟🥳</h5>
-          <h5 class="text-dark">Stattfinden duad des ganze wieder bei der Brauerei Leidmann z'Unterneikircha.🍻 Unsere Fische hamma wie gewohnt von da Fischzucht Salzinger.😋👌</h5>
-          <br />
-          <h5 class="text-dark">
-            Die Fische gibt's ohne Vorbestellung von 11:00 bis 14:00 Uhr und können entweder in gemütlicher Atmosphäre mit süffigen Getränken vor Ort verzehrt werden oder mit Hoam gnumma wern.🐟🎪🍻
-          </h5>
-          <br />
-          <h5 class="text-dark">Wir gfrein uns auf Eich!</h5>
-          <h5 class="text-dark">Eier Burschenverein Unterneukirchen🤝🏼</h5>
-          <br />
-          <h6 class="text-dark">🕖 11:00 bis 14:00 Uhr</h6>
-          <h6 class="text-dark">📍 Brauerei Leidmann</h6>
-          <h6 class="text-dark">🍺 Zum dort Essen, oda zum Midnehma!</h6>
-          <br />
+          <h5 class="text-dark"> Nach langen warten derfma eich endlich wieder recht herzlich zu unserem Wein-und Weißbierfest eilon! </h5>
+          <h5 class="text-dark"> Neba ausgewählten Weinen gibts a diverse Weißbiersorten aus da Region.🍷🍻</h5>
+          <br>
+          <h5 class="text-dark"> Für jede Menge Stimmung sorgen de Bergdachsen🎉🏔️🦡 und fürs leibliche Wohl ist natürlich a gesorgt! </h5>
+          <br>
+          <h5 class="text-dark"> Wir gfrein uns auf eichan Bsuach aufn Firmengelände vo Möbel-Eins! </h5>
+          <h5 class="text-dark"> Euer Burschenverein Unterneukirchen🤟🏾</h5>
+          <br>
+          <h6 class="text-dark"> 🕖 Beginn 19:30 Uhr</h6>
+          <h6 class="text-dark"> 📍 Fa. Möbel-Eins in Unterneukirchen </h6>
+          <br>
         </div>
       </div>
       <div class="modal-footer">
@@ -34,3 +27,36 @@
     </div>
   </div>
 </div>
+<!-- Modal Burschenparty -->
+<div class="modal fade" id="BurschenpartyModal" tabindex="-1" aria-labelledby="BurschenpartyModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-sm">
+    <div class="modal-content bg-light-grey">
+      <div class="modal-header">
+        <h5 class="modal-title" id="BurschenpartyModalModalLabel">23.08.2025 Burschenparty</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <div class="col">
+          <h5 class="text-dark"> Aufgeht´s zur legendären Burschenparty vom Burschenverein Unterneukirchen!😎🥳🍻 </h5>
+          <h5 class="text-dark"> Für die Musik sorgt @da_dj2b ausm Spinnradl Spitzingsee.🔊🎧 </h5>
+          <br>
+          <h5 class="text-dark"> Wie jedes Jahr ist auch wieder unser Weißbierkarussell vor Ort und wir sorgen an der Bar für ausreichend kühle Getränke!🍻🥃🍾 </h5>
+          <br>
+          <h5 class="text-dark"> Stattfinden duad des ganze im Festzelt auf dem Gelände der Firma Möbel-eins, direkt neben der B299.😉</h5>
+          <h5 class="text-dark"> Eiso liabe Leid, merkts eich des Datum guad vor und schauts zahlreich vorbei!😉🤝🏼</h5>
+          <br>
+          <h5 class="text-dark"> Mia gfrein uns auf eich!</h5>
+          <h5 class="text-dark"> Euer Burschenverein Unterneukirchen🥳</h5>
+          <br>
+          <h6 class="text-dark"> 🕖 Ab 20:00 Uhr</h6>
+          <h6 class="text-dark"> 📍 Fa. Möbel-Eins in Unterneukirchen </h6>
+          <br>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Schließen</button>
+      </div>
+    </div>
+  </div>
+</div>
+
