Insta Card Center

--- a/index.html
+++ b/index.html
@@ -281,22 +281,18 @@
           <div class="row">
             <div class="col-lg-3">
             </div>
-            <div class="col-lg-6" id="InstaCard">
+            <div class="col-lg-6 d-flex justify-content-center" id="InstaCard">
               <div class="form-check form-switch">
                 <input class="form-check-input" type="checkbox" id="flexSwitchCheckInsta" onclick="LoadInstaCard()">
                 <label class="form-check-label text-start text-white" for="flexSwitchCheckInsta">Ich bin damit einverstanden, dass mir Inhalte von Instagram angezeigt werden. Es können dabei personenbezogene Daten an den Anbieter des Inhalts und Drittdienste übermittelt werden. Mehr dazu in der <a href="#navtodatenschutzerklaerung" data-bs-toggle="modal" data-bs-target="#datenschutzerklaerungModal" class="text-light-grey">Datenschutzerklärung</a></label>
-                <br>
-                <br>
-                <br>
               </div>
             </div>
             <div class="col-lg-3">
-              <br>
-              <br>
             </div>
           </div>
           <div class="row text-light-grey">
             <div class="col">
+              <br>
               <h1 class="text-center">Social Media</h1>
             </div>
           </div>
