update kalender metadata

--- a/kalender/index.html
+++ b/kalender/index.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta property="og:image" content="https://www.bv-unterneukirchen.de/android-chrome-512x512.png" />
-  <meta property="og:title" content="Burschenverein Unterneukirchen" />
-  <meta property="og:description" content="Da BVU deaf eich recht herzlich auf seina Seitn begriassn." />
+  <meta property="og:title" content="Kalender BVU" />
+  <meta property="og:description" content="Kalender für die Mitglieder des Burschenverein Unterneukirchen" />
 
   <!-- <link href="node_modules/bootstrap/dist/css/bootstrap.min.css"rel="stylesheet"/> -->
   <link rel="stylesheet" href="../node_modules/bootstrap-icons/font/bootstrap-icons.css" />
